Ajout des dernières fonctionnnalités
- Récupération des données JSON dans la page photograph.html.
- Finaliser le modal Contact.
- Le système filtrage (popularité, dates, titre) via dropdown
- Intégration du lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -1,37 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Fisheye - photographe</title>
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html">
+        <img
+          src="assets/images/logo.png"
+          class="logo"
+          alt="logo cliquable pour retourner à la page d'accueil"
+        />
+      </a>
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+      <!-- header -->
+      <header class="photograph-header">
+        <button class="contact_button" onclick="displayModal()">
+          Contactez-moi
+        </button>
+      </header>
+
+      <!-- main content -->
+      <div class="photograph-content">
+        <div class="sort">
+          <h3 id="listboxLabel">Trier par</h3>
+          <div class="dropdown">
+            <button
+              role="combobox"
+              aria-labelledby="listboxLabel listbox-1"
+              aria-activedescendant="listbox-1"
+              aria-expanded="false"
+              aria-owns="listbox-1 listbox-2 listbox-3"
+              class="dropdown-toggle"
+            >
+              <div class="dropdown-toggle-text"> Popularité
+              <img class="chevron-down" src="assets/icons/chevron-down-svgrepo-com.svg" alt="chevron down" />
+              <img class="chevron-up" src="assets/icons/chevron-up-svgrepo-com.svg" alt="chevron up" />
+              </div>
+            </button>
+            <div role="listbox" class="options">
+              <button
+                role="option"
+                id="listbox-1"
+                aria-selected="true"
+                class="option--hidden"
+              >
+                <span>Popularité</span>
+              </button>
+              <button role="option" id="listbox-2"><span class="border-top">Date</span></button>
+              <button role="option" id="listbox-3"><span class="border-top">Titre</span></button>
+            </div>
+          </div>
+        </div>
+
+        <section class="result-medias"></section>
       </div>
     </main>
+    <div id="lightbox">
+      <button class="btn-close-lightbox" aria-label="fermer le lightbox">
+        <img class="fa-xmark" src="assets/icons/close-bold-svgrepo-com.svg" alt="close" />
+      </button>
+      <button class="btn-previous" aria-label="media precedent">
+        <img class="chevron-left" src="assets/icons/chevron-left-svgrepo-com.svg" alt="chevron left" />
+
+      </button>
+      <button class="btn-next" aria-label="media suivant">
+        <img class="chevron-right" src="assets/icons/chevron-right-svgrepo-com.svg" alt="chevron right" />
+      </button>
+
+      <div class="lightbox-content"></div>
+    </div>
     <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+      <div class="modal">
+        <header>
+          <img
+            class="btn-close"
+            src="assets/icons/close.svg"
+            alt="fermer la modale"
+            onclick="closeModal()"
+          />
         </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+        <form>
+          <div>
+            <label for="first-name">Prénom</label>
+            <input
+              id="first-name"
+              aria-describedby="err-message-fname"
+              type="text"
+            />
+            <p id="err-message-fname" class="error err-fname"></p>
+            <label for="last-name">Nom</label>
+            <input
+              id="last-name"
+              aria-describedby="err-message-lname"
+              type="text"
+            />
+            <p id="err-message-lname" class="error err-lname"></p>
+            <label for="email">Email</label>
+            <input
+              id="email"
+              aria-describedby="err-message-email"
+              type="email"
+            />
+            <p id="err-message-email" class="error err-email"></p>
+            <label for="message">Votre message</label>
+            <textarea id="message" name="message"></textarea>
+          </div>
+          <button class="contact_button" aria-label="bouton contact">
+            Envoyer
+          </button>
+        </form>
+      </div>
+    </div>
+    <script src="scripts/data/dataPhotographers.js"></script>
+    <script src="scripts/Factory/mediaFactory.js"></script>
+    <script src="scripts/templates/photographer.js"></script>
+    <script src="scripts/templates/media.js"></script>
+
+    <script src="scripts/pages/photographer.js"></script>
+    <script src="scripts/utils/contactForm.js"></script>
   </body>
 </html>
